--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -16,7 +16,7 @@
   color: #000000;
 }
 
-.login__label {
+.login__form-label {
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -25,7 +25,7 @@
   margin-bottom: 10px;
 }
 
-.login__input {
+.login__form-input {
   background-color: #F9F9F9;
   border-radius: 8px;
   width: 100%;
@@ -40,15 +40,15 @@
   border: none;
 }
 
-.login__input:focus {
+.login__form-input:focus {
   outline: none;
 }
 
-.login__input:last-child {
+.login__form-input:last-child {
   margin-bottom: 0;
 }
 
-.login__button_type_signin {
+.login__form-button_type_signin {
   border: none;
   width: 100%;
   background: #000000;
@@ -62,7 +62,7 @@
   height: 45px;
 }
 
-.login__button_type_signin:hover {
+.login__form-button_type_signin:hover {
   background-color: #A0A0A0;
   cursor: pointer;
 }
@@ -107,11 +107,11 @@
     margin: 50px 0 80px 0;
   }
 
-  .login__label {
+  .login__form-label {
     align-self: flex-start;
   }
 
-  .login__button_type_signin {
+  .login__form-button_type_signin {
     margin-top: 267px;
     font-size: 12px;
     line-height: 15px;
