--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -18,7 +18,7 @@
   color: #000000;
 }
 
-.register__label {
+.register__form-label {
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -27,7 +27,7 @@
   margin-bottom: 10px;
 }
 
-.register__input {
+.register__form-input {
   background-color: #F9F9F9;
   border-radius: 8px;
   width: 100%;
@@ -42,15 +42,15 @@
   border: none;
 }
 
-.register__input:focus {
+.register__form-input:focus {
   outline: none;
 }
 
-.register__input:last-child {
+.register__form-input:last-child {
   margin-bottom: 0;
 }
 
-.register__button_type_signup {
+.register__form-button_type_signup {
   border: none;
   width: 100%;
   background: #000000;
@@ -64,7 +64,7 @@
   height: 45px;
 }
 
-.register__button_type_signup:hover {
+.register__form-button_type_signup:hover {
   background-color: #A0A0A0;
   cursor: pointer;
 }
@@ -110,11 +110,11 @@
     margin: 50px 0 80px 0;
   }
 
-  .register__label {
+  .register__form-label {
     align-self: flex-start;
   }
 
-  .register__button_type_signup {
+  .register__form-button_type_signup {
     margin-top: 157px;
     font-size: 12px;
     line-height: 15px;
