--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -9,78 +9,31 @@
 }
 
 .login__title {
-  margin: 40px 0;
-  font-style: normal;
-  font-weight: 500;
+  margin: 40px 0 40px 0;
   font-size: 24px;
-  color: #000000;
-}
-
-.login__form-label {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 12px;
-  color: #A0A0A0;
-  margin-bottom: 10px;
-}
-
-.login__form-input {
-  background-color: #F9F9F9;
-  border-radius: 8px;
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 15px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-  color: #000000;
-  font-family: inherit;
-  border: none;
-}
-
-.login__form-input:focus {
-  outline: none;
-}
-
-.login__form-input:last-child {
-  margin-bottom: 0;
-}
-
-.login__form-button_type_signin {
-  border: none;
-  width: 100%;
-  background: #000000;
-  border-radius: 3px;
-  font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  color: #FFFFFF;
-  margin-top: 179px;
-  height: 45px;
-}
-
-.login__form-button_type_signin:hover {
-  background-color: #A0A0A0;
-  cursor: pointer;
+  line-height: 1.2;
+  color: #FFF;
 }
 
 .login__info {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: #A0A0A0;
+  width: 100%;
   margin: 16px 0 0 0;
-  align-self: center;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.21;
+  color: #8B8B8B;
 }
 
 .login__link {
-  color: #000000;
   margin-left: 6px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.21;
+  text-decoration: none;
+  transition: opacity .3s ease-in-out;
+  opacity: 1;
 }
 
 @media screen and (max-width: 768px) {
