--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -13,6 +13,12 @@
   justify-items: center;
 }
 
+.movies-list__empty{
+  display: flex;
+  justify-content: center;
+
+}
+
 .movies-list__button_type_load {
   width: 100%;
   height: 36px;
