--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -5,17 +5,15 @@
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  padding: 70px 0;
   box-sizing: border-box;
 }
 
 
 .register__title {
-  margin: 40px 0 40px 0;
+  margin: 30px 0;
   font-size: 24px;
   font-weight: 500;
   line-height: 1.2;
-  color: #FFF;
 }
 
 .register__info {
@@ -39,28 +37,16 @@
 }
 
 
-@media screen and (max-width: 768px) {
-  .register {
-    padding: 232px 0;
-  }
-}
-
 @media screen and (max-width: 515px) {
   .register {
     max-width: 350px;
     align-items: center;
-    padding: 100px 0;
   }
 }
 
 @media screen and (max-width: 420px) {
   .register {
     max-width: 260px;
-    padding: 56px 0 30px 0;
-  }
-
-  .register__title {
-    margin: 50px 0 80px 0;
   }
   
   .register__info {
