--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -223,6 +223,7 @@
   .nav-logged-in_type_burger-menu {
     width: 100%;
     padding: 144px 0 48px 0;
+    background-color: white;
   }
 
   .nav-logged-in__button_type_close {
