--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -4,6 +4,7 @@
   width: 100%;
   font-family: 'Inter', sans-serif;
   font-style: normal;
+  padding: 10px;
 }
 
 .auth-form__label {
@@ -73,12 +74,12 @@
 }
 
 .auth-form__submit-button_type_signup {
-  margin-top: 69px;
+  margin-top: 50px;
   height: 45px;
 }
 
 .auth-form__submit-button_type_signin {
-  margin-top: 179px;
+  margin-top: 100px;
   height: 45px;
 }
 
